==> Samraksh/eMote/MicroFrameworkPK_v4_3/DeviceCode/Targets/Native/Max3263x/DeviceCode/drivers/spi/netmf_spi.cpp <==
#include "mxc_config.h"
#include "clkman.h"
#include "ioman.h"
#include "netmf_spi.h"
#include "platform_selector.h"
#define MX25_ADDR           0x0
#define MX25_SPIM_WIDTH     SPIM_WIDTH_4
#define MX25_EXP_ID         0xc22538
#define IOMAN_F_SPIM0(cfg,io, ss0, ss1, ss2, ss3, ss4, q, f) {                            \
        cfg.req_reg = &MXC_IOMAN->spim0_req;                                           \
        cfg.ack_reg = &MXC_IOMAN->spim0_ack;                                           \
        cfg.req_val.spim0.core_io_req = io;                                       \
        cfg.req_val.spim0.ss0_io_req = ss0;                                       \
        cfg.req_val.spim0.ss1_io_req = ss1;		\
        cfg.req_val.spim0.ss2_io_req = ss2;		\
        cfg.req_val.spim0.ss3_io_req = ss3;		\
        cfg.req_val.spim0.ss4_io_req = ss4;      \
        cfg.req_val.spim0.quad_io_req = q;       \
        cfg.req_val.spim0.fast_mode = f; 	\
}
#define IOMAN_F_SPIM1(cfg,io, ss0, ss1, ss2, q, f) {                                      \
        cfg.req_reg = &MXC_IOMAN->spim1_req;	\
        cfg.ack_reg = &MXC_IOMAN->spim1_ack;	\
        cfg.req_val.spim1.core_io_req = io;	\
        cfg.req_val.spim1.ss0_io_req = ss0;	\
        cfg.req_val.spim1.ss1_io_req = ss1;	\
        cfg.req_val.spim1.ss2_io_req = ss2;	\
        cfg.req_val.spim1.quad_io_req = q;	\
        cfg.req_val.spim1.fast_mode = f;	\
	}

BOOL CPU_SPI_Initialize ()
{
#if defined(DEBUG_SPI)
	hal_printf("SPI Initialize\n");
#endif

	NATIVE_PROFILE_HAL_PROCESSOR_SPI();

	switch(SPI_SLAVE_COUNT){
		case 4: SPI_SLAVES_GPIO[3]=GPIO_SLAVE3_CHIPSELECT;
		case 3: SPI_SLAVES_GPIO[2]=GPIO_SLAVE2_CHIPSELECT;
		case 2: SPI_SLAVES_GPIO[1]=GPIO_SLAVE1_CHIPSELECT;
		case 1: SPI_SLAVES_GPIO[0]=GPIO_SLAVE0_CHIPSELECT;
		default: break;
	}
	spiDriverInit=TRUE;
}

void CPU_SPI_Uninitialize()
{
#if defined(DEBUG_SPI)
	hal_printf("SPI Uninitialize\n");
#endif
	
	//shutdown all SPI masters
	SPIM_Shutdown(MXC_SPIM0);
	SPIM_Shutdown(MXC_SPIM1);
	SPIM_Shutdown(MXC_SPIM2);
	//SPIM_Shutdown(MXC_SPIB);

	spiDriverInit=FALSE;
}

void CPU_SPI_Uninitialize(SPI_CONFIGURATION config)
{
#if defined(DEBUG_SPI)
			hal_printf("SPI_Uninitialize: \n");
#endif
	mxc_spim_regs_t *spi_reg=GetSPIRegForSlave(config.DeviceCS);
	if(spi_reg)SPIM_Shutdown(spi_reg);
	SPI_Initialized[GetSPIPortForSlave(config.DeviceCS)]=FALSE;
}

BOOL CPU_SPI_Enable(SPI_CONFIGURATION config)
{
	if(!spiDriverInit) CPU_SPI_Initialize();

	uint8_t _mport= GetSPIPortForSlave(config.DeviceCS);
	//Initialize the SPIM
	spim_cfg_t cfg;
	cfg.mode =config.SPI_mod;
	cfg.ssel_pol = GetSSel(0,config.CS_Active) ;	//We will always use slave 0 on a master for now.
	cfg.baud = config.Clock_RateKHz * 1000;

	sys_cfg_spim_t sys_cfg;

	// MX25 IO Config                  core I/O, ss0, ss1, ss2, quad, fast I/O

	//set clock to auto
	sys_cfg.clk_scale = CLKMAN_SCALE_AUTO;

	mxc_spim_regs_t *spi_reg;
	//Write the below IOMAN_SPI carefully based on how many slaves are connected to each spi master
	//right now we simply request the slave 0, assuming atleast one slave is connected

	switch (_mport) {
		case SPIPort_M0:{
			spi_reg= MXC_SPIM0;
													//io, ss0, ss1, ss2, ss3, ss4, q, f
			//sys_cfg.io_cfg = (ioman_cfg_t)IOMAN_SPIM0(1,   1,  	0,  0,   0,    0,  0, 0);
			IOMAN_F_SPIM0(sys_cfg.io_cfg, 1,   1,  	0,  0,   0,    0,  0, 0);

			break;
		}
		case SPIPort_M1: {
			spi_reg= MXC_SPIM1;
													//io, ss0, ss1, ss2, q, f
			//sys_cfg.io_cfg = (ioman_cfg_t)IOMAN_SPIM1(1,   1,  	0,  0,   0, 0);
			IOMAN_F_SPIM1(sys_cfg.io_cfg, 1,   1,  	0,  0,   0, 0);
			break;
		}
		case SPIPort_M2:{
			spi_reg= MXC_SPIM2;
					//m, 			io, ss0, ss1, ss2, sr0, sr1, q, f
			IOMAN_F_SPIM2(sys_cfg.io_cfg, IOMAN_MAP_A, 1, 1, 0, 0, 0, 0, 0, 0)
			break;
		}
		default:{
#if defined(DEBUG_SPI)
			hal_printf("SPI_Enable: Unknown SPI Port/Master #\n");
#endif
			return FALSE;
		}
	}

	int error;
	if((error = SPIM_Init(spi_reg, &cfg, &sys_cfg)) != E_NO_ERROR) {
		hal_printf("Error initializing SPIM %d\n", error);
		return FALSE;
	}

	hal_printf("SPIM Initialized\n");
	SPI_Initialized[_mport]=TRUE;
	return TRUE;
}

void CPU_SPI_GetPins (UINT32 _mport, GPIO_PIN& msk, GPIO_PIN& miso, GPIO_PIN& mosi)
{
	/* Return the GPIO pin for selected SPI */

#if defined(DEBUG_SPI)
	hal_printf("SPI GetPins\n");
#endif

	switch (_mport) {
		case SPIPort_M0:
			msk = 7;
			miso = 6;
			mosi = 5;
			break;
		case SPIPort_M1:
			msk = 15;
			miso = 14;
			mosi = 13;
			break;
		case SPIPort_M2:
			msk = 15;
			miso = 14;
			mosi = 13;
			break;
		default:
			break;

	}
}
