==> Samraksh/eMote/MicroFrameworkPK_v4_3/DeviceCode/Targets/Native/STM32F10x/DeviceCode/drivers/spi/netmf_spi.cpp <==
#include "netmf_spi.h"
#include <stm32f10x.h>
#define MAX_SPI_PORTS 3
#define SPIx             SPI1
#define SPIx_CLK         RCC_APB2Periph_SPI1
#define SPIx_GPIO        GPIOA
#define SPIx_GPIO_CLK    RCC_APB2Periph_GPIOA
#define SPIx_NSS	     GPIO_Pin_4 //nss
#define SPIx_PIN_SCK     GPIO_Pin_5 //sck  //purple
#define SPIx_PIN_MISO	 GPIO_Pin_6  //miso //green
#define SPIx_PIN_MOSI    GPIO_Pin_7 //mosi //blue
#define SPIy             SPI2
#define SPIy_CLK         RCC_APB1Periph_SPI2
#define SPIy_GPIO        GPIOB
#define SPIy_GPIO_CLK    RCC_APB2Periph_GPIOB
#define SPIy_NSS	     GPIO_Pin_12 //nss
#define SPIy_PIN_SCK     GPIO_Pin_13 //sck
#define SPIy_PIN_MISO	 GPIO_Pin_14 //miso
#define SPIy_PIN_MOSI    GPIO_Pin_15 //mosi
#define TIMEOUT_WAIT(x) { \
    volatile UINT32 itr_time = 0; \
    while((x) && ++itr_time < TIMEOUT ) {__NOP();}; \
    if(itr_time >= TIMEOUT) { ++spiSpinWaitFailureCount; ASSERT(0); } \
    ++spiSpinWaitCount; \
    if(spiSpinWaitMax < itr_time) { spiSpinWaitMax = itr_time;}; \
    spiSpinWaitAvg = (spiSpinWaitAvg * (spiSpinWaitCount - 1) + itr_time) / spiSpinWaitCount; \
    { \
        static volatile UINT64 localCount = 0; \
        static volatile UINT64 localAvg = 0; \
        static volatile UINT64 localMax = 0; \
        localCount++; \
        if(localMax < itr_time) { localMax = itr_time; }; \
        localAvg = (localAvg * (localCount - 1) + itr_time) / localCount; \
    } \
 }

BOOL CPU_SPI_Initialize ()
{
	

	//Set the GPIO pins for the SPI	
	//TODO: Right now we have no way to know if the pins are stolen by any other device
	//before we are restting it. Handle tht in future.

#if defined(DEBUG_SPI)
	hal_printf("SPI Initialize\n");
#endif

	NATIVE_PROFILE_HAL_PROCESSOR_SPI();
	
	//Initialize Clocks for SPI and GPIO
	RCC_Config();
		
	//Initialize NVIC
	NVIC_Config();
		
	//TODO Make sure the GPIO pins are available and if they are put them in safe state	
	//Loop through all the spi peripherals and put there pin in known state and set the value
	//initialized array to 1
	SPI_Initialized[0]= 1; //SPIx
	SPI_Initialized[1]= 1; //SPIy
    
}

void CPU_SPI_Uninitialize()
{
	/* Reset the SPI peripherals */
#if defined(DEBUG_SPI)
	hal_printf("SPI Uninitialize\n");
#endif

	//Enable and Disable Reset States for all the SPI peripherals
	
	//SPI1
	RCC_APB2PeriphResetCmd(RCC_APB2Periph_SPI1, ENABLE);    
    RCC_APB2PeriphResetCmd(RCC_APB2Periph_SPI1, DISABLE);

	//SPI2
	RCC_APB1PeriphResetCmd(RCC_APB1Periph_SPI2, ENABLE);
	RCC_APB1PeriphResetCmd(RCC_APB1Periph_SPI2, DISABLE);

	//SPI3
	RCC_APB1PeriphResetCmd(RCC_APB1Periph_SPI3, ENABLE);
	RCC_APB1PeriphResetCmd(RCC_APB1Periph_SPI3, DISABLE);
	
}

void CPU_SPI_Uninitialize(SPI_CONFIGURATION config)
{
#if defined(DEBUG_SPI)
    hal_printf("SPI Uninitialize #\n");
#endif

    if(config.SPI_mod == SPIBUS1)
    {
        //SPI1
        RCC_APB2PeriphResetCmd(RCC_APB2Periph_SPI1, ENABLE);
        RCC_APB2PeriphResetCmd(RCC_APB2Periph_SPI1, DISABLE);
    }
    else if(config.SPI_mod == SPIBUS2)
    {
        //SPI2
        RCC_APB1PeriphResetCmd(RCC_APB1Periph_SPI2, ENABLE);
        RCC_APB1PeriphResetCmd(RCC_APB1Periph_SPI2, DISABLE);
    }
}

void CPU_SPI_Enable(SPI_CONFIGURATION config)
{

	if(config.SPI_mod == SPIBUS1)
	{

		//RCC_PCLK2Config(RCC_HCLK_Div2);
		RCC_APB2PeriphClockCmd(SPIx_GPIO_CLK | SPIx_CLK, ENABLE);

		GPIO_InitTypeDef GPIO_InitStructure;


		/* Configure SPIx pins: SCK, MISO and MOSI */
		GPIO_InitStructure.GPIO_Pin = SPIx_PIN_SCK | SPIx_PIN_MISO | SPIx_PIN_MOSI | SPIx_NSS;
		GPIO_ConfigurePin(SPIx_GPIO, GPIO_InitStructure.GPIO_Pin, GPIO_Mode_AF_PP, GPIO_Speed_50MHz);


		SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
		SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
		SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
		SPI_InitStructure.SPI_CPOL = 0;
		SPI_InitStructure.SPI_CPHA = 0;
		SPI_InitStructure.SPI_NSS = SPI_NSS_Hard;
		SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_16;
		SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
		SPI_InitStructure.SPI_CRCPolynomial = 7;

		SPI_Init(SPIx, &SPI_InitStructure);
		SPI_SSOutputCmd(SPIx, ENABLE);
		SPI_Cmd(SPIx, ENABLE);
	}
	else if(config.SPI_mod == SPIBUS2)
	{

		//RCC_PCLK1Config(RCC_HCLK_Div2);
		//RCC_PCLK2Config(RCC_HCLK_Div2);
		RCC_APB2PeriphClockCmd(SPIy_GPIO_CLK, ENABLE);
		RCC_APB1PeriphClockCmd(SPIy_CLK, ENABLE);

		GPIO_InitTypeDef GPIO_InitStructure;


		/* Configure SPIy pins: SCK, MOSI */
		GPIO_InitStructure.GPIO_Pin = SPIy_PIN_SCK | SPIy_PIN_MOSI | SPIy_NSS;
		GPIO_ConfigurePin(SPIy_GPIO, GPIO_InitStructure.GPIO_Pin, GPIO_Mode_AF_PP, GPIO_Speed_50MHz);

		// SPI MISO pin
		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_14;
		GPIO_ConfigurePin(GPIOB, GPIO_InitStructure.GPIO_Pin, GPIO_Mode_IN_FLOATING, GPIO_Speed_50MHz);

		SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
		SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
		SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
		SPI_InitStructure.SPI_CPOL = 0;
		SPI_InitStructure.SPI_CPHA = 0;
		SPI_InitStructure.SPI_NSS = SPI_NSS_Hard;
		SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_16;
		SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
		SPI_InitStructure.SPI_CRCPolynomial = 7;

		SPI_Init(SPIy, &SPI_InitStructure);
		SPI_SSOutputCmd(SPIy, ENABLE);
		SPI_Cmd(SPIy, ENABLE);

	}

}

void CPU_SPI_GetPins (UINT32 spi_mod, GPIO_PIN& msk, GPIO_PIN& miso, GPIO_PIN& mosi)
{
	/* Return the GPIO pin for selected SPI */

#if defined(DEBUG_SPI)
	hal_printf("SPI GetPins\n");
#endif

	switch (spi_mod)
	{
	case 0:
		msk = GPIO_Pin_7;
		miso = GPIO_Pin_6;
		mosi = GPIO_Pin_5;
		break;

	case 1:
		msk = GPIO_Pin_15;
		miso = GPIO_Pin_14;
		mosi = GPIO_Pin_13;
		break;
	
	default:
		break;

	}
}
